# recaller

./: .env.example  .gitignore  README.md  pyproject.toml  test_similarity_comparison.ipynb
src/recaller/: __init__.py  __main__.py  cli.py  config.py
src/recaller/database/: __init__.py  repository.py  schema.py
src/recaller/models/: __init__.py  flashcard.py  note.py
src/recaller/orchestrator/: __init__.py
src/recaller/services/: __init__.py  anki_exporter.py  embedding_service.py  flashcard_generator.py  gemini_service.py  merge_engine.py  notion_client.py  ollama_service.py  similarity_engine.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_anki_exporter.py  test_embedding_repository.py  test_embedding_service.py  test_flashcard_generator.py  test_gemini_service.py  test_merge_engine.py  test_notion_client.py  test_ollama_service.py  test_similarity_engine.py
